# build-your-own-jira-with-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
jira-cli/src/: main.rs  persistence.rs  store.rs
jira-cli/src/models/: ticket.rs
jira-wip/: Cargo.toml
jira-wip/src/: main.rs  path_to_enlightenment.rs
jira-wip/src/koans/00_greetings/: 00_greetings.rs
jira-wip/src/koans/01_ticket/: 01_ticket.rs  02_status.rs  03_validation.rs  04_visibility.rs  05_ownership.rs  06_traits.rs  07_derive.rs  08_recap.rs
jira-wip/src/koans/02_ticket_store/: 01_store.rs  02_mutability.rs  02_option.rs  03_id_generation.rs  04_metadata.rs  05_type_as_constraints.rs  06_result.rs  06_results.rs  07_vec.rs  08_delete_and_update.rs  09_store_recap.rs
jira-wip/src/koans/03_cli/: 00_cli.rs  01_persistence.rs  02_the_end.rs
koans/: Cargo.toml
koans-framework/: Cargo.toml
koans-framework/src/: lib.rs  main.rs
koans/src/: lib.rs  main.rs
src/: main.rs  persistence.rs  store.rs
src/models/: comment.rs  mod.rs  ticket.rs  ticket_draft.rs  ticket_patch.rs  title.rs
