[package]
name = "jira-cli"
version = "0.1.0"
authors = ["LukeMathWalker <rust@lpalmieri.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2" }
structopt = { version = "0.3", features = ["paw"] }
paw = "1"
directories = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
