[package]
name = "jira-wip"
version = "0.1.0"
authors = ["LukeMathWalker <rust@lpalmieri.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
structopt = { version = "0.3", features = ["paw"] }
paw = "1"

[dev-dependencies]
fake = "2"
