[package]
name = "jira-wip"
version = "0.1.0"
authors = ["LukeMathWalker <rust@lpalmieri.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
structopt = { version = "0.3", features = ["paw"] }
paw = "1"
directories = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"

[dev-dependencies]
fake = "2"
tempfile = "3"
